--- a/pos-facef-node-master/blog/package.json
+++ b/pos-facef-node-master/blog/package.json
@@ -24,6 +24,7 @@
     "esm": "^3.2.25",
     "hapi-auth-jwt2": "^8.8.1",
     "hapi-router": "^5.0.0",
+    "hapi-sequelize": "^3.0.6",
     "hapi-sequelizejs": "^3.1.0",
     "hapi-swagger": "^11.1.0",
     "http-status": "^1.4.0",
@@ -34,5 +35,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.2"
   }
 }
